code/spring-boot-demo1/manual/service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: hello
    expose: "true"
  name: hello
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 8090
  selector:
    app: hello-world
