code/spring-boot-demo1/manual/route.yml
apiVersion: v1
kind: Route
metadata:
  name: hello
spec:
  to:
    kind: Service
    name: hello
